<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashUIActivity">

<!--    App Icon-->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/brand_logo"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        android:contentDescription="@string/brand_image" />

<!--    App Name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="24sp"

        />

<!--    App Description-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_description"
        android:text="@string/app_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

<!--    Powered by-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/secondary_variant_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/powered_by"
            android:text="@string/powered_by_brainy_space"
            android:gravity="center"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:id="@+id/brainy_logo"
            android:src="@raw/brainy"
            android:contentDescription="@string/brain_y" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>